--- a/table002.html
+++ b/table002.html
@@ -5,6 +5,16 @@
               <meta http-equiv="X-UA-Compatible" content="IE=edge">
               <meta name="viewport" content="width=device-width, initial-scale=1.0">
               <title>Inglish002</title>
+              <style>
+                            body{
+                                          background-color: darkcyan;
+                                          text-shadow: 2px 3px 4px #000;
+                                          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                                          font-size: 20px;
+                                          
+
+                            }
+              </style>
 
 </head>
 <body>
@@ -27,5 +37,6 @@
 <li> watch movie, news. <br>  <li>I don't understand almost anything but they told me that you have to persist.</li>
 <li>I listen in class when the teacher puts on dialogues, and at home I study the grammar and exercises a lot. And I listen too, of course.</li>
 <li>I try to do it, but it's hard. It takes time, because to understand I have to read the text at the same time and look up several words in the dictionary.</li>
+<a href="Table003.html"><button>Proximo capitulo</button></a>
 </body>
 </html>
